--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   font-size: 18px;
   color: #FFFFFF; 
-  background-color: #0e032d;
+  background-color: #000000;
 } 
 
 .movies_heading {
@@ -45,7 +45,7 @@ body {
 }
 
 .timeline_control {
-  background-color: #34217a;
+  background-color: rgba(51, 37, 114, 0.4);
   border-radius: 5px;
   height: 41.75vh;
   margin: 0rem 0rem 1vh 0rem;
@@ -55,13 +55,13 @@ body {
 .bubble_control {
   height: 16.3vh;
   padding: 1.7vh 1.7vh 1.7vh 1.7vh;
-  background-color: #34217a;
+  background-color: rgba(51, 37, 114, 0.4);
   border-radius: 5px;
   margin: 0rem 0rem 1.7vh 0rem;
 }
 
 .filters {
-  background-color: #34217a;
+  background-color: rgba(51, 37, 114, 0.4);
   border-radius: 5px;
   height: 30.55vh;
   margin: 0rem 0rem 1.7vh 0rem;
@@ -70,14 +70,14 @@ body {
 
 .timeline_viz {
   border-radius: 5px;
-  background-color: #34217a;
+  background-color: rgba(51, 37, 114, 0.2);
   height: 36.59vh;
   margin: 0vh 0rem 1vh 0rem;
 }
 
 .graph_viz {
   border-radius: 5px;
-  background-color: #34217a;
+  background-color: rgba(51, 37, 114, 0.2);
   height: 59.06vh;
   margin: 1.7vh 0rem 1.7vh 0rem;
 }
@@ -182,6 +182,8 @@ body {
 
 #menu .sub-menu {
   display: none;
+  border-width: 0.01vh;
+  border-color: rgba(255,255,255,0.8);
 }
 
 #menu input[type="checkbox"]:checked + .sub-menu {
@@ -239,7 +241,8 @@ body {
 
   #menu li {
     float: left;
-    border-width: 0 1px 0 0;
+    border-width: 0 0.01vh 0 0;
+    border-color: rgba(255,255,255,0.8);
   }
 
   #menu .sub-menu li {
@@ -247,7 +250,8 @@ body {
   }
 
   #menu .sub-menu {
-    border-width: 0;
+    border-width: 0.01vh;
+    border-color: rgba(255,255,255,0.8);
     margin: 0;
     position: absolute;
     top: 100%;
