--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
   margin: 0;
   font-size: 18px;
-  color: #FFFFFF; 
+  color: rgba(255, 255, 255, 0.8); 
   background-color: #000000;
 } 
 
