--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -13,6 +13,7 @@ body {
   font-family: "Lobster";
   text-align: center;
   font-size: 4vh;
+  color: rgba(255, 255, 255, 0.85);
   padding: 1vh 0vh 1vh 0vh;
   height: 7vh;
 }
@@ -152,7 +153,7 @@ body {
 #menu a {
   position: relative;
   display: block;
-  color: white;
+  color: rgba(255,255,255,0.7);
   text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
   text-decoration: none;
   border-radius: 5px;
@@ -163,7 +164,6 @@ body {
 
 #menu, 
 #toggle-menu {
-  background-color: #09c;
 }
 
 #toggle-menu, 
@@ -177,8 +177,7 @@ body {
 }
 
 #menu a:hover {
-  background-color: #7f7f7f;
-  color: #09c;
+  background-color: rgb(1, 135, 134);
 }
 
 #menu .sub-menu {
@@ -193,7 +192,6 @@ body {
 }
 
 #menu .sub-menu a:hover {
-  color: #444;
 }
 
 #toggle-menu .drop-icon, 
