--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -107,6 +107,10 @@ body {
     overflow-x: hidden;
 }
 
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
 #menu ul {
   margin: 0;
   padding: 0;
