--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -109,10 +109,12 @@ body {
 
 ::-webkit-scrollbar {
   -webkit-appearance: none;
+  width: 1vh;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #7d77a4;
+  background-color: #7b7a8d;
+  border-radius: 8px;
 }
 
 #menu ul {
