--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -107,6 +107,19 @@ body {
     overflow-x: hidden;
 }
 
+.tag {
+  background-color: rgb(1, 135, 134);
+  padding: 1vh 1.5vh 1vh 1.5vh;
+  margin: 0px 1.5vh 1.5vh 0vh;
+}
+
+.Genre_tags {
+  margin-bottom: 2vh;
+  height: auto;
+  max-height: 20vh;
+  overflow-x: hidden;
+}
+
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 1vh;
