--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -311,7 +311,7 @@ body {
     left: 100%;
   }
 
-  #menu li > input[type="checkbox"]:checked + .sub-menu {
+  #menu li:hover > input[type="checkbox"] + .sub-menu {
     display: block;
   }
 }
