--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -147,7 +147,7 @@ body {
 }
 
 .Comedy {
-  background-color: #d0efe8;
+  background-color: #74c9fb;
 }
 
 .Crime {
@@ -199,7 +199,7 @@ body {
 }
 
 .War {
-  background-color: #eae285;
+  background-color: #6d3068;
 }
 
 .Western {
