--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -151,7 +151,7 @@ body {
 }
 
 .Crime {
-  background-color: #49e0a4;
+  background-color: #0d9b56;
 }
 
 .Documentary {
@@ -163,11 +163,11 @@ body {
 }
 
 .Family {
-  background-color: #829Da8;
+  background-color: #b8c19e;
 }
 
 .Fantasy {
-  background-color: #be8890;
+  background-color: #ea967d;
 }
 
 .History {
@@ -183,7 +183,7 @@ body {
 }
 
 .Mystery {
-  background-color: #ea967d;
+  background-color: #b74b9c;
 }
 
 .Romance {
@@ -195,11 +195,11 @@ body {
 }
 
 .Thriller {
-  background-color: #b74b90;
+  background-color: #553e8f;
 }
 
 .War {
-  background-color: #6d3068;
+  background-color: #e9b650;
 }
 
 .Western {
