--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -163,7 +163,7 @@ body {
 }
 
 .Family {
-  background-color: #b8c19e;
+  background-color: #6f837c;
 }
 
 .Fantasy {
@@ -175,7 +175,7 @@ body {
 }
 
 .Horror {
-  background-color: #efb6ff;
+  background-color: #b784de;
 }
 
 .Music {
@@ -187,7 +187,7 @@ body {
 }
 
 .Romance {
-  background-color: #553e8f;
+  background-color: #a23041;
 }
 
 .Science {
@@ -195,15 +195,15 @@ body {
 }
 
 .Thriller {
-  background-color: #a23041;
+  background-color: #553e8f;
 }
 
 .War {
-  background-color: #e9b650;
+  background-color: #713e45;
 }
 
 .Western {
-  background-color: #eed80e;
+  background-color: #e9b650;
 }
 
 .Genre_tags {
