--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -118,7 +118,7 @@ body {
 }
 
 .tag:hover, .Action:hover, .Adventure:hover, .Animation:hover, .Comedy:hover, .Crime:hover, .Documentary:hover, .Drama:hover, .Family:hover, .Fantasy:hover, .History:hover, .Horror:hover, .Music:hover, .Mystery:hover, .Romance:hover, .Science:hover, .Thriller:hover, .War:hover, .Western:hover {
-  background-color: #3e355f;
+  background-color: #554794;
 }
 
 .close_tag {
