--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -64,6 +64,7 @@ body {
   background-color: rgba(51, 37, 114, 0.2);
   height: 36.59vh;
   margin: 0vh 0rem 1vh 0rem;
+  padding: 1.7vh;
 }
 
 .graph_viz {
@@ -71,6 +72,7 @@ body {
   background-color: rgba(51, 37, 114, 0.2);
   height: 59.06vh;
   margin: 1.7vh 0rem 1.7vh 0rem;
+  padding: 1.7vh;
 }
 
 .viz_column {
