--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -67,6 +67,11 @@ body {
   padding: 1.7vh;
 }
 
+.svg1 {
+  width : 100%;
+  height: 100%;
+}
+
 .graph_viz {
   border-radius: 5px;
   background-color: rgba(51, 37, 114, 0.2);
