--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -64,12 +64,12 @@ body {
   background-color: rgba(51, 37, 114, 0.2);
   height: 36.59vh;
   margin: 0vh 0rem 1vh 0rem;
-/*   padding: 1.7vh; */
+  padding: 1.7vh;
 }
 
 .svg1 {
   width : 96%;
-  height: 33.19vh;
+  height: 96%;
 }
 
 .graph_viz {
