--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -19,7 +19,7 @@ body {
 }
 
 .filter_box {
-  height: 24vh;
+  height: 26vh;
 }
 
 .controls_column {
@@ -46,7 +46,7 @@ body {
 .timeline_control {
   background-color: rgba(51, 37, 114, 0.5);
   border-radius: 5px;
-  height: 41.75vh;
+  height: 45.15vh;
   margin: 0rem 0rem 1vh 0rem;
   padding: 1.7vh 1.7vh 1.7vh 1.7vh;
 }
@@ -54,7 +54,7 @@ body {
 .filters {
   background-color: rgba(51, 37, 114, 0.5);
   border-radius: 5px;
-  height: 48.55vh;
+  height: 45.15vh;
   margin: 0rem 0rem 1.7vh 0rem;
   padding: 1.7vh 1.7vh 1.7vh 1.7vh;
 }
@@ -224,7 +224,7 @@ body {
 .Genre_tags {
   margin-top: 2vh;
   height: auto;
-  max-height: 12.5vh;
+  max-height: 17vh;
   overflow-x: hidden;
 }
 
@@ -237,14 +237,14 @@ body {
   stroke-width: 1.5px;
 }
 
-.node--leaf {
-  fill: white;
+.node--leaf:hover {
+  stroke-width: 0px;
 }
 
 .label,
 .node--root,
 .node--leaf {
-  pointer-events: none;
+  /*pointer-events: none;*/
 }
 
 ::-webkit-scrollbar {
