Displaying movie title on click

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -253,6 +253,13 @@ body {
   pointer-events: none;
 }
 
+.label {
+  font: 20px "Helvetica Neue", Helvetica, Arial, sans-serif;
+  text-anchor: middle;
+  text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
+}
+
+
 ::-webkit-scrollbar {
   -webkit-appearance: none;
   width: 1vh;
