--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -108,15 +108,15 @@ body {
   margin-top: 2vh;
 }
 
-.overlay_info { 
-    max-height: 39vh;
-    margin-top: 2vh;
+#overlay_info { 
+    height: 41.5vh;
+    border-radius: 5px;
     width: 0; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    z-index: 10; /* Sit on top */
+    position: fixed;
     left: 0;
-    bottom: 0;
-    background-color: rgb(0,0,0); /* Black fallback color */
-    background-color: rgba(0,0,0, 0.9); /* Black w/opacity */
+    top: 20vh;
+    background-color: rgba(51, 37, 114, 0.4); /* Black w/opacity */
     overflow-x: hidden; /* Disable horizontal scroll */
     transition: 0.3s; /* 0.5 second transition effect to slide in or slide down 
 
