--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -55,7 +55,7 @@ body {
 .Color_heading p {
   font-family: 'Yeseva One';
   font-size: 2vh;
-  margin: 1vh 0vh 1.3vh 0vh;
+  margin: 1.2vh 0vh 1.3vh 0vh;
 }
 
 .Y_axis, .Genres, .filter_box_box, .Color_heading, .Genres_heading{
@@ -95,7 +95,7 @@ body {
 
 #svg2 {
   display: table;
-  margin: 0 auto;
+  margin: auto;
   margin-top: 0.5vh;
   height: 58vh;
   width: 58vh;
