Added reset button

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -269,6 +269,26 @@ body {
   font-size: 9vh;
 }
 
+.bubble_reset {
+  float: right;
+  color: rgba(255,255,255,0.8);
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, .125);
+  text-decoration: none;
+  border-style: solid;
+  /*margin-right: 1vw;*/
+  margin-top: 0.2vh;
+  border-radius: 5px;
+  font-size: 1.5vh;
+  border-width: 0.01vh;
+  border-color: rgba(255,255,255,0.85);
+  padding: 0.8vh 1.2vw 0.8vh 1.2vw;
+}
+
+.bubble_reset:hover {
+  background-color: rgb(85, 71, 148);
+  cursor: pointer;
+}
+
 .y_scrollable_menu {/*
     height: auto;
     max-height: 24.4vh;*/
